--- a/tasks/CentOS-6.yml
+++ b/tasks/CentOS-6.yml
@@ -1,31 +1,33 @@
 ---
-- name: create directory for certbot to live in
-  file:
-    path: /opt/certbot
-    owner: root
-    group: root
-    mode: 0700
-    state: directory
-
-- name: Install EPEL repository
+- name: Enable the EPEL repository
   yum:
     name: epel-release
-    state: present
+    state: latest
 
 - name: download certbot
   command: "wget https://dl.eff.org/certbot-auto"
   args:
-    chdir: /opt/certbot/
-    creates: /opt/certbot/certbot-auto
+    chdir: /usr/local/sbin
+    creates: /usr/local/sbin/certbot-auto
     warn: false
 
 - name: Make certbot-auto executable
   file:
-    path: /opt/certbot/certbot-auto
+    path: /usr/local/sbin/certbot-auto
     mode: 0700
 
+- name: Create symlink from certbot-auto to certbot
+  file:
+    src: /usr/local/sbin/certbot-auto
+    dest: /usr/local/sbin/certbot
+    owner: root
+    group: root
+    state: link
+
 - name: First run of certbot-auto - takes a while
-  command: "/opt/certbot/certbot-auto --os-packages-only -q"
-  
+  shell: "certbot --os-packages-only --quiet; certbot"
+  failed_when: false
+  args:
+    creates: "/opt/eff.org/certbot/venv/bin/python"
   
 # vim:ft=ansible:
